--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
     <link href="css/toastify.css" rel="stylesheet"/>
     <link href="css/vars.css" rel="stylesheet"/>
     <link href="css/nano.css" rel="stylesheet"/>
-    <script type="module" src="scripts/fore-dev.js"></script>
+    <script type="module">
+        import './scripts/fore.js';
+        import ApexCharts from 'apexcharts';
+    </script>
 
 </head>
 <body>
